# cs101

./: README.md  setup_cpp.sh
bits/: CMakeLists.txt  conanfile.txt
bits/src/exe/: CMakeLists.txt  main.cpp
bits/src/lib/: CMakeLists.txt  layout.h  mylib.h  ring.h
bits/src/unittest/: CMakeLists.txt  test_mylib.cpp  test_ring.cpp
graph/c++/lib/: graph.h
graph/c++/tests/: topo.cpp
ml/backprop/pytorch/: Backprop.ipynb
ml/llm/: lora_demo.ipynb
ml/llm/gpt/: classification.py  configs.py  mygpt.py  spam.py  text.py  utils.py
quick/c++/lib/: partitioner.h
quick/c++/tests/: partitioner.cpp
uf/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  conanfile.txt
uf/src/exe/: CMakeLists.txt  main.cpp
uf/src/lib/: CMakeLists.txt  uf.cpp  uf.h
uf/src/unittest/: CMakeLists.txt  test_uf.cpp
